src/graph/snapshots/dlin__graph__filter__tests__collapse_snapshot_global.snap
---
source: src/graph/filter.rs
expression: render_mermaid(&collapsed)
---
flowchart LR
    model_orders["orders"]
    source_raw_orders(["orders"])

    source_raw_orders -.->|"source (via 2)"| model_orders

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    class model_orders model
    class source_raw_orders source
